# TsfApp

./: .clangd  .gitignore  CMakeLists.txt  README.md  tsfapp.cpp
scripts/: prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt
src/: textstor.cpp  tsfapp.rc
